--- a/force-app/main/default/lwc/caseItemManagerContainer/caseItemManagerContainer.html
+++ b/force-app/main/default/lwc/caseItemManagerContainer/caseItemManagerContainer.html
@@ -1,21 +1,33 @@
 <template>
     <lightning-card title="Case Items" icon-name="standard:case">
         <div slot="actions" class="slds-button-group" role="group">
-            <lightning-button
-                icon-name="utility:add"
-                label="Add Case Item"
-                variant="neutral"
-                onclick={handleOpenAddModal}>
-            </lightning-button>
-            <lightning-button
-                class="slds-m-left_x-small"
-                icon-name="utility:send"
-                icon-position="left"
-                label="Submit Case to Vendor"
-                variant="brand"
-                onclick={handleSubmitCase}
-                disabled={disableSubmit}>
-            </lightning-button>
+            <template if:true={hasOrder}>
+                <div class="slds-box slds-theme_info slds-m-around_small slds-grid slds-grid_vertical-align-center">
+                    <lightning-icon icon-name="standard:orders" size="small" class="slds-m-right_small"></lightning-icon>
+                    <span>
+                        Related Order: 
+                        <a href={orderUrl} target="_blank">{orderNumber}</a>
+                    </span>
+                </div>
+            </template>
+
+            <template if:false={isLocked}>
+                <lightning-button
+                    icon-name="utility:add"
+                    label="Add Case Item"
+                    variant="neutral"
+                    onclick={handleOpenAddModal}>
+                </lightning-button>
+                <lightning-button
+                    class="slds-m-left_x-small"
+                    icon-name="utility:send"
+                    icon-position="left"
+                    label="Submit Case to Vendor"
+                    variant="brand"
+                    onclick={handleSubmitCase}
+                    disabled={disableSubmit}>
+                </lightning-button>
+            </template>
         </div>
 
         <div class="slds-p-horizontal_small slds-p-vertical_x-small slds-grid slds-grid_align-spread slds-border_bottom">
@@ -29,9 +41,19 @@
 
         <c-case-item-table
             record-id={recordId}
+            locked={isLocked}
             onitemscountchange={handleItemsCountChange}>
         </c-case-item-table>
     </lightning-card>
+    <template if:true={isLocked}>
+        <div class="slds-notify slds-notify_alert slds-alert_warning slds-m-around_small" role="alert">
+            <span class="slds-assistive-text">warning</span>
+            <h2>
+                This case is locked. Items cannot be added, edited, or deleted because the status is 
+                "<strong>{caseStatus}</strong>".
+            </h2>
+        </div>
+    </template>
 
     <c-add-item-modal
         record-id={recordId}
